.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/DMR_Product__c.object
<CustomObject>
    <fields>
        <fullName>Digital_Media_Request__c</fullName>
        <description>DMR Product is a detail object of the Digital Media Request master object</description>
        <label>Digital Media Request</label>
        <referenceTo>Digital_Media_Request__c</referenceTo>
        <relationshipLabel>DMR Products</relationshipLabel>
        <relationshipName>DMR_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Graphics_Source__c</fullName>
        <label>Graphics Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graphics_URL__c</fullName>
        <label>Graphics URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>DMR Products</relationshipLabel>
        <relationshipName>DMR_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>5500</length>
        <type>LongTextArea</type>
    </fields>
    <label>DMR Product</label>
    <nameField>
        <label>DMR Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMR Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>